[package]
name = "komihash-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.12", features=["rayon"]}

[net]
retry = 2                 
git-fetch-with-cli = true 

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}
fxhash = "0.2.1"
seahash = "3.0.5"
fnv = "1.0.5"
ahash = "0.7.6"
hashbrown = "0.12"
lazy_static = "1.4"


[[test]]
name = "komihash_tests"
path = "tests/lib.rs"

[[bench]]
name = "speed_bench"
path = "benches/bench.rs"

[[bench]]
name = "komibench"
path = "benches/komihash.rs"
harness = false

[[bench]]
name = "hashmap_benches"
path = "benches/hashmap.rs"

[[bench]]
name = "hashmap_benches2"
path = "benches/hashmap_two.rs"

